Renamed css modules for parallax image and added new picture Fixed padding for resume button Fixed dimensions for mobile images on tablets

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -26,22 +26,52 @@
     }
 }
 
-.san_francisco_img {
-    background-image: url('./assets/images/san_francisco.jpg');
+.banner_img {
+    background-image: url('assets/images/me.jpeg');
 
     width: 100%;
-    height: 500px;
+    height: 550px;
 
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    /* Turn off parallax initially for all tablets and phones */
+    background-attachment: scroll;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-/* Turn off parallax scrolling for all tablets and phones */
-@media (max-device-width: 1024px) {
-    .san_francisco_img {
-        background-attachment: scroll;
+@media (min-width: 0px) {
+    .banner_img {
+        height: 200px;
+    }
+}
+
+@media (min-width: 375px) {
+    .banner_img {
+        height: 250px;
+    }
+}
+
+@media (min-width: 400px) {
+    .banner_img {
+        height: 290px;
+    }
+}
+
+@media (min-width: 600px) {
+    .banner_img {
+        height: 400px;
+    }
+}
+
+@media (min-width: 800px) {
+    .banner_img {
+        height: 550px;
+    }
+}
+
+@media (min-width: 1025px) {
+    .banner_img {
+        /* Re-create parallax scrolling effect */
+        background-attachment: fixed;
     }
 }
